# yacraft

./: CMakeLists.txt  README.md  YaCraft.cpp
res/Shaders/: Simple.fs  Simple.vs
src/DataTypes/: BiArray.h
src/Engine/: APIHeader.h
src/Engine/Camera/: Camera.cpp  Camera.h
src/Engine/Frustum/: Frustum.cpp  Frustum.h
src/Engine/OpenGL/: GLHeaders.h  Types.h
src/Engine/OpenGL/Buffer/: Buffer.cpp  Buffer.h  ModelBuffer.cpp  ModelBuffer.h
src/Engine/OpenGL/Framebuffer/: Framebuffer.cpp  Framebuffer.h
src/Engine/OpenGL/Shader/: Shader.cpp  Shader.h
src/Engine/OpenGL/Texture/: Cubemap.h  Texture.cpp  Texture.h  TextureHeaders.h  TextureLoader.cpp  TextureLoader.h
src/Engine/Shapes/: Plate.cpp  Plate.h  Shape.h
src/Engine/Window/: Window.cpp  Window.h
src/Game/: Game.cpp  Game.h  Global.cpp  Global.h
src/Game/Block/: Block.cpp  Block.h  BlockDefines.cpp  BlockDefines.h  BlockTemplate.cpp  BlockTemplate.h
src/Game/Primitive/: Cube.cpp  Cube.h
src/Game/World/: Chunk.cpp  Chunk.h  ChunkSegment.cpp  ChunkSegment.h  World.cpp  World.h
src/Math/: FastNoise.cpp  FastNoise.h  General.cpp  General.h  MathHeader.h
src/Utilities/: Keys.h  Utilities.cpp  Utilities.h
